Added statuses, Configuration and new project with Dto models.

--- a/React.WebApi/React.WebApi.csproj
+++ b/React.WebApi/React.WebApi.csproj
@@ -19,6 +19,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\React.DB\React.DB.csproj" />
+      <ProjectReference Include="..\React.Dto\React.Dto.csproj" />
     </ItemGroup>
 
 </Project>
