Added few entities and some API.

--- a/React.WebApi/appsettings.json
+++ b/React.WebApi/appsettings.json
@@ -8,5 +8,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Cors": {
+    "Name": "AllowReact",
+    "Allowed" : {
+      "Origins": ["http://localhost:5173", "https://localhost:5173"],
+      "Methods": ["GET", "POST", "PUT", "PATCH", "DELETE" ],
+      "Headers": ["Content-Type", "Authorization" ]
+    }
+  }
 }
