--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 ﻿.idea/*
+.vs/*
 
 **/obj/rider.project.model.nuget.info
 **/obj/rider.project.restore.info
@@ -20,6 +21,7 @@
 node_modules/        # if working with Node.js
 *.npm                # NPM cache files
 yarn.lock            # Yarn lockfile
+*.cache
 
 # Ignore configuration-related secrets
 appsettings.*.json
@@ -49,3 +51,4 @@ React.DB/obj
 React.Dto/bin
 React.Dto/obj
 React.Dto/obj/Debug/net9.0/
+React.Dto/obj/Debug/net9.0/*.cache
