--- a/React.WebApi/React.WebApi.csproj
+++ b/React.WebApi/React.WebApi.csproj
@@ -20,6 +20,7 @@
     <ItemGroup>
       <ProjectReference Include="..\React.DB\React.DB.csproj" />
       <ProjectReference Include="..\React.Dto\React.Dto.csproj" />
+      <ProjectReference Include="..\React.MongoDB\React.MongoDB.csproj" />
     </ItemGroup>
 
 </Project>
