--- a/React.WebApi/appsettings.json
+++ b/React.WebApi/appsettings.json
@@ -1,7 +1,15 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=ReactDB;Trusted_Connection=True;MultipleActiveResultSets=True;Encrypt=False;"
+    "DefaultConnection": "Server=.;Database=ReactDB;Trusted_Connection=True;MultipleActiveResultSets=True;Encrypt=False;",
   },
+  "MongoDB": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "ProjectsDB",
+    "ProjectsCollection": "Projects",
+    "TagsCollection": "Tags",
+    "TicketsCollection": "Tickets",
+    "StatusesCollection": "Statuses"
+  },  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
