WebApi connection string fixed. Avoided warning.

--- a/React.WebApi/appsettings.json
+++ b/React.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=ReactDB;Trusted_Connection=True;MultipleActiveResultSets=True;Encrypt=False;",
+    "DefaultConnection": "Server=.;Database=ReactDB;Trusted_Connection=True;MultipleActiveResultSets=True;Encrypt=False;"
   },
   "MongoDB": {
     "ConnectionString": "mongodb://localhost:27017",
